--- a/styles/css/home/rich-text/vtex.rich-text.css
+++ b/styles/css/home/rich-text/vtex.rich-text.css
@@ -6,6 +6,7 @@
   text-align   : left;
   margin-bottom: 30px;
   margin-top   : 30px;
+  background-color: rgb(127, 206, 255);
 }
 
 .wrapper--texto-section-one-desktop {
