--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -17,3 +17,9 @@
    margin-left: 90px;
   }
 }
+
+
+/*------------color boton ventana pop up---------------*/
+.minicartCheckoutButton:global(.vtex-button ){
+  background-color: blue;
+}
