code and style will be refactored, add style to the slider points

--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -13,13 +13,22 @@
 
 /*------------tablet---------------*/
 @media (min-width: 768px) and (max-width: 1024px) {
-  .openIconContainer{
-   margin-left: 90px;
+  .openIconContainer {
+    margin-left: 90px;
   }
 }
 
 
 /*------------color boton ventana pop up---------------*/
-.minicartCheckoutButton:global(.vtex-button ){
+.minicartCheckoutButton:global(.vtex-button) {
   background-color: blue;
+}
+
+.minicartTitle {
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 600;
+  line-height: 17.5px;
+  text-align : left;
+
 }
