--- a/styles/css/home/header/vtex.mega-menu.css
+++ b/styles/css/home/header/vtex.mega-menu.css
@@ -6,3 +6,12 @@
     background-color: aqua;
     transition      : background-color 0.3s, color 0.3s;
 }
+
+.triggerContainer{
+    margin-top: 30px;
+}
+
+.triggerButtonIcon--mega-menu-trigger{
+    width: 24px !important;
+    height: 24px !important;
+ }
