--- a/styles/css/home/slider/vtex.flex-layout.css
+++ b/styles/css/home/slider/vtex.flex-layout.css
@@ -3,7 +3,25 @@
   margin   : auto;
 }
 
-.flexRow--conatainer-banner-home-desktop {
-  width : 1092px !important;
-  height: 340px;
+@media (min-width: 1024px) {
+  .flexRow--conatainer-banner-home-desktop {
+    width : 1092px !important;
+    height: 340px;
+  }
+}
+
+
+/* .flexRowContent--phone_main-shelf-products{
+  width: 328px;
+  height:292px;
+} */
+/* .flexRow--container-shelf-product{
+  width: 1092px !important;
+  height: 378px !important;
+} */
+
+@media (max-width: 767px) {
+  .flexCol--second__row-text {
+    width: 20%;
+  }
 }
