--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,55 +1,3 @@
-
-
-.paginationDotsContainer--custom-slider{
-  /* height: 50.89px; */
-  top   : 420px;
-  left  : 10px;
-  text-align: center;
-  margin    : auto;
-}
-
-/*-------------------------------- slider info card--------------------------------*/
-
-.paginationDot--custom-slider.paginationDot--custom-slider--isActive {
-  background-color: black;
-  transform       : scale(1.5);
-  border-radius   : 50% !important;
-  transition      : background-color 0.3s, transform 0.3s;
-  width           : 16.96px !important;
-  height          : 16.96px !important;
-  top             : 30.52px !important;
-  left            : 107.52px;
-  gap             : 0px;
-  opacity         : 0px;
-}
-
-.paginationDot--custom-slider {
-  margin       : 0 5px !important;
-  display      : inline-block !important;
-  border-radius: 0%;
-  transition   : background-color 0.3s, transform 0.3s;
-  height       : 1.41px !important;
-  padding      : 0% !important;
-  width        : 26.09px !important;
-  left         : 40.99px;
-  gap          : 0px;
-  opacity      : 0px;
-  margin-top   : 10px !important;
-}
-
-.sliderLayoutContainer--carouse {
-  display        : flex;
-  flex-direction : column;
-  align-items    : center;
-  justify-content: center;
-  margin-top     : 10%;
-}
-
-.carousel .image {
-  width : 100%;
-  height: auto;
-}
-
 .carousel .rich-text {
   text-align: center;
   margin-top: 10px;
@@ -74,42 +22,7 @@
 }
 
 
-.paginationDotsContainer--custom-slider-shelf {
-  text-align: center;
-  height    : 0%;
-  left      : 10px;
-  gap       : 0px;
-}
-
-.paginationDot--custom-slider-shelf.paginationDot--custom-slider-shelf--isActive {
-  background-color: black;
-  transform       : scale(1.5);
-  border-radius   : 50% !important;
-  transition      : background-color 0.3s, transform 0.3s;
-  width           : 16.96px !important;
-  height          : 16.96px !important;
-  top             : 30.52px !important;
-  left            : 107.52px;
-  gap             : 0px;
-  opacity         : 0px;
-}
-
-.paginationDot--custom-slider-shelf {
-  margin       : 0 5px !important;
-  display      : inline-block !important;
-  border-radius: 0%;
-  transition   : background-color 0.3s, transform 0.3s;
-  height       : 1.41px !important;
-  padding      : 0% !important;
-  width        : 26.09px !important;
-  left         : 40.99px;
-  gap          : 0px;
-  opacity      : 0px;
-  margin-top   : 10px !important;
-}
-
 @media (max-width: 780px) {
-
   .sliderLeftArrow {
     display: none;
   }
@@ -118,6 +31,9 @@
     display: none;
   }
 
+  .paginationDotsContainer--custom-slider-shelf {
+    top: 540px !important;
+  }
 }
 
 .slideChildrenContainer--custom-slider-shelf {
@@ -126,4 +42,12 @@
 
 .slide--custom-slider {
   padding: 10px;
+}
+
+/*------------tablet---------------*/
+@media (min-width: 768px) and (max-width: 1024px) {
+  .paginationDotsContainer--custom-slider-shelf {
+    top: 600px !important;
+  }
+
 }
