--- a/styles/css/home/minicart/vtex.product-list.css
+++ b/styles/css/home/minicart/vtex.product-list.css
@@ -1,9 +1,9 @@
-.deleteIcon {
+/* .deleteIcon {
     background-image: url("/arquivos/icon-delete.svg") !important;
     width           : 20px;
     height          : 20px;
     position        : absolute;
-}
+} */
 
 .productName {
     font-family: Lexend;
