--- a/styles/css/home/header/vtex.mega-menu.css
+++ b/styles/css/home/header/vtex.mega-menu.css
@@ -18,12 +18,20 @@
     font-weight: 300;
   
 }
-@media (min-width: 1024px) {
-    .menuContainerNav--components-mega-menu {
-        transform: translateX(13%);
-    }
+.styledLinkText--components-mega-menu{
+    font-family: Lexend;
+    font-size  : 12px;
+    font-weight: 400;
+    line-height: 15px;
+    text-align : right;
 
 }
+/* @media (min-width: 1024px) {
+    .menuContainerNav--components-mega-menu {
+        transform: translateX(-23%);
+    }
+
+} */
 .styledLinkContainer--components-mega-menu {
     margin : 0% !important;
     padding: 16px;
