--- a/styles/css/home/minicart/vtex.flex-layout.css
+++ b/styles/css/home/minicart/vtex.flex-layout.css
@@ -1,3 +1,3 @@
-.flexRow--minicart-footer:global(.vtex-button) {
-    background: blueviolet;
+.flexRow--minicart-footer {
+    box-shadow: none;
 }
