--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -14,15 +14,22 @@
 /*------------tablet---------------*/
 
 @media (min-width: 640px) and (max-width: 1024px) {
-  .openIconContainer{
-   margin-left: 90px;
+  .openIconContainer {
+    margin-left: 90px;
   }
 }
 
 
 /*------------color boton ventana pop up---------------*/
-.minicartCheckoutButton:global(.vtex-button) {
-  background-color: blue;
+.minicartCheckoutButton--minicart-checkout-button :global(.vtex-button){
+  background-color: #1D2734;
+  width: 328px;
+  height: 48px;
+  left: 16px;
+  padding: 10px;
+  border-radius: 40px;
+  border: 1px;
+  margin-top: 18px;
 }
 
 .minicartTitle {
@@ -31,5 +38,22 @@
   font-weight: 600;
   line-height: 17.5px;
   text-align : left;
+  display: none;
+}
 
+.opened--minicart-container {
+  width : 400px;
+  height: auto;
+}
+
+.minicartProductListContainer--minicart-product-list:global(.vtex-flex-layout-0-x-flexColChild) {
+  width : 400px;
+  height: auto;
+}
+
+.minicartEmptyStateContainer--minicart-empty-state{
+  justify-content: flex-start;
+}
+.drawerContent--minicart-container{
+  max-height: max-content;
 }
