--- a/styles/css/home/minicart/vtex.minicart.css
+++ b/styles/css/home/minicart/vtex.minicart.css
@@ -57,3 +57,9 @@
 .drawerContent--minicart-container{
   max-height: max-content;
 }
+
+.minicartCheckoutButton--minicart-checkout-button :global(.vtex-button__label ){
+  content: "Finalizar tu compra";
+  display: block;
+  text-align: center;
+}
