--- a/styles/css/home/minicart/vtex.product-list.css
+++ b/styles/css/home/minicart/vtex.product-list.css
@@ -11,5 +11,12 @@
     font-weight: 300;
     line-height: 15.12px;
     text-align : left;
+}
 
+.removeButtonContainer :global(.vtex-product-list-0-x-deleteIcon){
+    background-image: url("/arquivos/icon-delete.svg") !important
+}
+
+.productBrandName{
+    display: none;
 }
