--- a/styles/css/home/slider/vtex.slider-layout.css
+++ b/styles/css/home/slider/vtex.slider-layout.css
@@ -47,7 +47,7 @@
 }
 
 .paginationDotsContainer--custom-slider-shelf {
-    top: 470px;
+    top: 425px;
 }
 
 .carousel .rich-text {
@@ -55,7 +55,7 @@
     margin-top: 10px;
 }
 
-.sliderLeftArrow--custom-slider {
+/* .sliderLeftArrow--custom-slider {
     width        : 47px;
     margin-bottom: 94px;
 }
@@ -63,15 +63,15 @@
 .sliderRightArrow--custom-slider {
     width        : 47px;
     margin-bottom: 94px
-}
-
+} */
+/* 
 .sliderLeftArrow {
     left: -40px;
 }
 
 .sliderRightArrow {
     right: -40px;
-}
+} */
 
 
 @media (max-width: 780px) {
@@ -86,10 +86,10 @@
 
 }
 
-.slideChildrenContainer--custom-slider-shelf {
+/* .slideChildrenContainer--custom-slider-shelf {
     padding: 10px;
-}
-
+} */
+/* 
 .slide--custom-slider {
     padding: 10px;
-}
+} */
