style(minicart): update add/remove products

--- a/styles/css/home/minicart/vtex.flex-layout.css
+++ b/styles/css/home/minicart/vtex.flex-layout.css
@@ -1,3 +1,7 @@
 .flexRow--minicart-footer {
     box-shadow: none;
 }
+
+.flexRowContent--product-description :global(.vtex-flex-layout-0-x-stretchChildrenWidth){
+    justify-content: left;
+}
