--- a/styles/css/home/header/vtex.store-header.css
+++ b/styles/css/home/header/vtex.store-header.css
@@ -1,30 +1,38 @@
 @media (min-width: 1024px) {
-.headerStickyRow--container-menu-desktop{
-    max-width: 1280px;
-    margin: auto;
+    .headerStickyRow--container-menu-desktop {
+        max-width: 1280px;
+        margin   : auto;
+    }
 }
-}
+
 @media (min-width: 1024px) {
-.headerStickyRow--container-menu-icon-global{
-    max-width: 1280px;
-    margin: auto;
-    overflow: auto;
+    .headerStickyRow--container-menu-icon-global {
+        max-width  : 1280px;
+        margin     : auto;
+        /* overflow: auto; */
+    }
 }
-}
-.headerRowContainer--container-menu-icon-global{
+
+.headerRowContainer--container-menu-icon-global {
     padding-bottom: 10px;
-    overflow: auto;
+    overflow      : auto;
 }
+
+.headerRowContentContainer--container-menu-icon-global {
+    margin-left: 15px;
+}
+
 @media (min-width: 1024px) {
-.headerRowBackground--container-menu-icon-global{
-    width: 1280px;
-    height: 56px;
+    .headerRowBackground--container-menu-icon-global {
+        width : 1280px;
+        height: 56px;
+    }
 }
-}
+
 /*------------tablet---------------*/
 @media (min-width: 640px) and (max-width: 1024px) {
-    .headerRowBackground--container-menu-icon-global{
-      padding-left: 0%;
-      width: 0% !important;
+    .headerRowBackground--container-menu-icon-global {
+        padding-left: 0%;
+        width       : 0% !important;
     }
-  }
+}
