--- a/styles/css/home/header/vtex.login.css
+++ b/styles/css/home/header/vtex.login.css
@@ -2,12 +2,11 @@
   background   : #1d2734;
   height       : 40px;
   width        : 80px;
-  top          : 24px;
   gap          : 10px;
   border-radius: 40px;
   border       : 1px;
-  opacity      : 0px;
   margin-top   : 5%;
+  margin-left  : 40px;
 }
 
 .label {
