--- a/styles/css/home/shelf-products/vtex.product-summary.css
+++ b/styles/css/home/shelf-products/vtex.product-summary.css
@@ -1,5 +1,4 @@
 .description {
-  font-family       : Lexend;
   font-size         : 14px;
   font-weight       : 400;
   line-height       : 1.5;
@@ -26,7 +25,11 @@
 }
 
 .priceContainer {
-  margin-right: 70px;
+  display: flex;
+  justify-content: left;
+  align-items: baseline;
+  padding-bottom: 0%;
+  padding-top: 8px;
 }
 
 .wishlistIconContainer--favorite :global(.vtex-button) {
